--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 puphpet/config-custom.yaml
 /web/bundles/
 /app/bootstrap.php.cache
-/app/cache/*
+/var/cache/*
 /app/config/parameters.yml
-/app/logs/*
-!app/cache/.gitkeep
-!app/logs/.gitkeep
+/var/logs/*
+!var/cache/.gitkeep
+!var/logs/.gitkeep
 /app/phpunit.xml
 /build/
 /vendor/
