--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,8 @@ item:
     resource: "@ItemBundle/Controller/"
     type:     annotation
     prefix:   /
+
+easy_admin_bundle:
+    resource: "@EasyAdminBundle/Controller/"
+    type:     annotation
+    prefix:   /admin
