--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,11 +7,11 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: fr
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -70,5 +70,81 @@ swiftmailer:
     spool:     { type: memory }
 
 easy_admin:
+    design:
+        menu:
+            - label: 'admin.menu.equipment'
+              children: [ 'Weapon', 'Armor', 'Shield', 'Clothing' ]
+            - label: 'admin.menu.animal'
+              children: ['Carrier', 'Mount', 'Pet']
+            - label: 'admin.menu.spe'
+              children: ['SpeAnimal', 'SpeItem']
+            - Common
+            - Herb
     entities:
-        - ItemBundle\Entity\Item
+        Weapon:
+            class: ItemBundle\Entity\Weapon
+            list:
+                fields:
+                    - { property: name, label: 'admin.item.name' }
+                    - { property: price, label: 'admin.item.price' }
+                    - { property: location, label: 'admin.equipment.location' }
+                    - { property: accuracy, label: 'admin.weapon.accuracy' }
+                    - { property: damage, label: 'admin.weapon.damage' }
+        Armor:
+            class: ItemBundle\Entity\Armor
+            list:
+                fields:
+                    - { property: name, label: 'admin.item.name' }
+                    - { property: price, label: 'admin.item.price' }
+                    - { property: location, label: 'admin.equipment.location' }
+                    - { property: defense_points, label: 'admin.armor.defense_points' }
+                    - { property: penality, label: 'admin.armor.penality' }
+        Shield:
+            class: ItemBundle\Entity\Shield
+            list:
+                fields:
+                    - { property: 'name', label: 'admin.item.name' }
+                    - { property: 'price', label: 'admin.item.price' }
+                    - { property: 'location', label: 'admin.equipment.location' }
+                    - { property: 'defense_points', label: 'admin.shield.defense_points' }
+                    - { property: 'penality', label: 'admin.shield.penality' }
+                    - { property: 'dodge_value', label: 'admin.shield.dodge_value' }
+        Clothing:
+            class: ItemBundle\Entity\Clothing
+            list:
+                fields:
+                    - { property: 'name', label: 'admin.item.name' }
+                    - { property: 'price', label: 'admin.item.price' }
+                    - { property: 'location', label: 'admin.equipment.location' }
+        Carrier:
+            class: ItemBundle\Entity\Carrier
+        Mount:
+            class: ItemBundle\Entity\Mount
+        Pet:
+            class: ItemBundle\Entity\Pet
+        SpeAnimal:
+            class: ItemBundle\Entity\SpeAnimal
+            list:
+                fields:
+                    - { property: 'feature', label: 'admin.spe.feature' }
+                    - { property: 'amount', label: 'admin.spe.amount' }
+                    - { property: 'operation', label: 'admin.spe.operation' }
+        SpeItem:
+            class: ItemBundle\Entity\SpeItem
+            list:
+                fields:
+                    - { property: 'feature', label: 'admin.spe.feature' }
+                    - { property: 'amount', label: 'admin.spe.amount' }
+                    - { property: 'operation', label: 'admin.spe.operation' }
+        Herb:
+            class: ItemBundle\Entity\Herb
+            list:
+                fields:
+                    - { property: 'name', label: 'admin.item.name' }
+                    - { property: 'price', label: 'admin.item.price' }
+        Common:
+            class: ItemBundle\Entity\Common
+            list:
+                fields:
+                    - { property: 'name', label: 'admin.item.name' }
+                    - { property: 'price', label: 'admin.item.price' }
