--- a/src/ItemBundle/Resources/config/doctrine/Equipment.orm.yml
+++ b/src/ItemBundle/Resources/config/doctrine/Equipment.orm.yml
@@ -4,7 +4,7 @@ ItemBundle\Entity\Equipment:
     repositoryClass: ItemBundle\Repository\EquipmentRepository
     inheritanceType: JOINED
     discriminatorColumn:
-        name: type
+        name: piece
         type: string
         length: 255
     discriminatorMap:
