Fixed few errors

--- a/src/ItemBundle/Resources/config/doctrine/Item.orm.yml
+++ b/src/ItemBundle/Resources/config/doctrine/Item.orm.yml
@@ -33,4 +33,5 @@ ItemBundle\Entity\Item:
         instances:
             targetEntity: ItemBundle\Entity\SpecifiedItem
             mappedBy: item
+            cascade: ['remove']
     lifecycleCallbacks: {  }
