--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "javiereguiluz/easyadmin-bundle": "^1.11",
         "doctrine/doctrine-migrations-bundle": "^1.1",
-        "symfony/assetic-bundle": "^2.7"
+        "symfony/assetic-bundle": "^2.7",
+        "egeloen/ckeditor-bundle": "^4.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^2.7"
