--- a/src/ItemBundle/Resources/config/doctrine/SpecifiedItem.orm.yml
+++ b/src/ItemBundle/Resources/config/doctrine/SpecifiedItem.orm.yml
@@ -21,7 +21,7 @@ ItemBundle\Entity\SpecifiedItem:
             referencedColumnName: id
     manyToMany:
         features:
-            orderBy: {'operation': 'ASC'}
+            orderBy: {'operation': 'DESC'}
             targetEntity: ItemBundle\Entity\Spe
             joinTable:
                 name: instance_features
