--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "javiereguiluz/easyadmin-bundle": "^1.11",
         "doctrine/doctrine-migrations-bundle": "^1.1",
         "symfony/assetic-bundle": "^2.7",
-        "egeloen/ckeditor-bundle": "^4.0"
+        "egeloen/ckeditor-bundle": "^4.0",
+        "friendsofsymfony/user-bundle": "dev-master"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^2.7"
