Added Login to Admin

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,7 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: admin.yml }
+    - { resource: "@UserBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -37,7 +38,7 @@ framework:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        ['ItemBundle']
+    bundles:        ['ItemBundle','UserBundle']
     ruby: /usr/local/rvm/rubies/ruby-2.0.0-p481/bin/ruby
     filters:
         cssrewrite: ~
@@ -80,3 +81,8 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: UserBundle\Entity\User
