--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,8 +5,9 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_ADMIN: [ ROLE_EDIT, ROLE_DELETE, ROLE_USER ]
+        ROLE_USER: [ ROLE_NEW, ROLE_SHOW ]
 
     providers:
         fos_userbundle:
