--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,7 +9,7 @@ item:
     prefix:   /
 
 easy_admin_bundle:
-    resource: "@EasyAdminBundle/Controller/"
+    resource: "@UserBundle/Controller/AdminController.php"
     type:     annotation
     prefix:   /admin
 
