Added SeasonalSpell and IncantationSpell

--- a/src/CharacterBundle/Resources/config/doctrine/Spell.orm.yml
+++ b/src/CharacterBundle/Resources/config/doctrine/Spell.orm.yml
@@ -1,6 +1,13 @@
 CharacterBundle\Entity\Spell:
     type: entity
     table: null
+    inheritanceType: SINGLE_TABLE
+    discriminatorColumn:
+        name: discr
+        type: string
+    discriminatorMap:
+        incantation: CharacterBundle\Entity\IncantationSpell
+        seasonal: CharacterBundle\Entity\SeasonalSpell
     repositoryClass: CharacterBundle\Repository\SpellRepository
     id:
         id:
